# chorgle

./: .gitignore  CMakeLists.txt  README.md  alloc.h  chorgle.html  game.h  gfx_wasm.c  graphics.c  graphics.h  main.c  resource.cmake  window.c  window.h  window_glfw.c  window_wasm.c
res/: sprite.frag.h  sprite.vert.h
resbuild/: CMakeLists.txt  README.md  main.c
shaders/: sprite.frag  sprite.vert
